# ML-Observability

./: .env  .gitignore  README.md  fastf1_test.ipynb  main.py  pyproject.toml
api/: fastAPI-test.py
coreF1/: stream.py
database/: connection.py  manage.py
f1_telemetry/: ARCHITECTURE.md  README.md  requirements.txt
journal/: Week1.md  alchemy-engine.py
